new generation proof sorter